Work on GitHub pages for now, cname/aname next week?

--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting…</title>
-<link rel="canonical" href="/about/overview/">
-<meta http-equiv="refresh" content="0; url=/about/overview/">
+<link rel="canonical" href="/figuration/about/overview/">
+<meta http-equiv="refresh" content="0; url=/figuration/about/overview/">
 <h1>Redirecting…</h1>
-<a href="/about/overview/">Click here if you are not redirected.</a>
-<script>location="/about/overview/"</script>
+<a href="/figuration/about/overview/">Click here if you are not redirected.</a>
+<script>location="/figuration/about/overview/"</script>
