--- a/content/index.html
+++ b/content/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting…</title>
-<link rel="canonical" href="/content/reboot/">
-<meta http-equiv="refresh" content="0; url=/content/reboot/">
+<link rel="canonical" href="/figuration/content/reboot/">
+<meta http-equiv="refresh" content="0; url=/figuration/content/reboot/">
 <h1>Redirecting…</h1>
-<a href="/content/reboot/">Click here if you are not redirected.</a>
-<script>location="/content/reboot/"</script>
+<a href="/figuration/content/reboot/">Click here if you are not redirected.</a>
+<script>location="/figuration/content/reboot/"</script>
