--- a/widgets/index.html
+++ b/widgets/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting…</title>
-<link rel="canonical" href="/widgets/overview/">
-<meta http-equiv="refresh" content="0; url=/widgets/overview/">
+<link rel="canonical" href="/figuration/widgets/overview/">
+<meta http-equiv="refresh" content="0; url=/figuration/widgets/overview/">
 <h1>Redirecting…</h1>
-<a href="/widgets/overview/">Click here if you are not redirected.</a>
-<script>location="/widgets/overview/"</script>
+<a href="/figuration/widgets/overview/">Click here if you are not redirected.</a>
+<script>location="/figuration/widgets/overview/"</script>
