Add missing download buttons

--- a/get-started/download/index.html
+++ b/get-started/download/index.html
@@ -258,8 +258,7 @@
 
         </div>
         <div class="card-footer text-sm-center">
-
-Coming soon!
+<a href="https://github.com/cast-org/figuration/releases/download/v0.1.0/figuration-0.1.0-dist.zip" class="btn btn-info">Download Figuration</a>
         </div> <!-- /.card-footer -->
       </div> <!-- /.card -->
     </div>
@@ -272,8 +271,7 @@ Coming soon!
 
         </div>
         <div class="card-footer text-sm-center">
-
-Coming soon!
+<a href="https://github.com/cast-org/figuration/archive/v0.1.0.zip" class="btn">Download source</a>
         </div> <!-- /.card-footer -->
       </div> <!-- /.card -->
     </div>  <!-- /.col -->
