Add tracking events for downloads

--- a/get-started/download/index.html
+++ b/get-started/download/index.html
@@ -100,7 +100,7 @@
             
     <h1>Get Started</h1>
     <p class="lead">
-        An overview of CFW, including why we built it, how to use it, basic templates, examples, and more.
+        An overview of Figuration, including why we built it, how to use it, basic templates, examples, and more.
     </p>
 
 
@@ -271,7 +271,7 @@
 
         </div>
         <div class="card-footer text-sm-center">
-<a href="https://github.com/cast-org/figuration/releases/download/v1.0.0/figuration-1.0.0-dist.zip" class="btn btn-info">Download Figuration</a>
+<a href="https://github.com/cast-org/figuration/releases/download/v1.0.0/figuration-1.0.0-dist.zip" class="btn btn-info" onclick="ga('send', 'event', 'Get Started', 'Download', 'Download compiled');">Download Figuration</a>
         </div> <!-- /.card-footer -->
       </div> <!-- /.card -->
     </div>
@@ -284,7 +284,7 @@
 
         </div>
         <div class="card-footer text-sm-center">
-<a href="https://github.com/cast-org/figuration/archive/v1.0.0.zip" class="btn">Download source</a>
+<a href="https://github.com/cast-org/figuration/archive/v1.0.0.zip" class="btn" onclick="ga('send', 'event', 'Get Started', 'Download', 'Download source');">Download source</a>
         </div> <!-- /.card-footer -->
       </div> <!-- /.card -->
     </div>  <!-- /.col -->
