--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
 
             <p class="start">
-                <a href="/get-started/download/" class="btn btn-lg btn-start">Download</a>
+                <a href="/get-started/download/" class="btn btn-lg btn-start" onclick="ga('send', 'event', 'Homepage', 'Download', 'Download 1.0.0');">Download</a>
                 <br />
                 Version: 1.0.0
                 <br />
