visual test - title and remove comments

--- a/test/visual/flexbox-grid.html
+++ b/test/visual/flexbox-grid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-<title>Figuration Widget Tests</title>
+<title>Figuration - Flexbox Grid</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -356,38 +356,6 @@
         </div>
 
 </div>
-<!--
-v4: Grids
-https://github.com/twbs/bootstrap/issues/18471
-
-v4: Grid redux
-https://github.com/twbs/bootstrap/pull/19099
-
-v4 flex list-group implementation
-https://github.com/twbs/bootstrap/issues/18978
-
-Add .col and .row-* classes to support flex-direction: column
-https://github.com/twbs/bootstrap/pull/20272
-
-Fix .input-group-btn overflowing its parent when Flexbox is enabled
-https://github.com/twbs/bootstrap/pull/19762
-
-Flexbox pulls
-https://github.com/twbs/bootstrap/pull/18976
-
-Integrate postcss-flexbugs-fixes into build
-https://github.com/twbs/bootstrap/pull/19109
-
-Flexbox grid columns not full width at small viewport sizes
-https://github.com/twbs/bootstrap/issues/20206
-
-.table-responsive when Flexbox is enabled
-https://github.com/twbs/bootstrap/issues/19609
-
-Why I need to write col-xs-12 if I want full column width on mobile with Flexbox grid?
-https://github.com/twbs/bootstrap/issues/17603
-
--->
 
 </body>
 </html>
