add auto-width flex columns

--- a/test/visual/flexbox-grid.html
+++ b/test/visual/flexbox-grid.html
@@ -355,6 +355,53 @@
             <div class="col-md-4">.col-md-4</div>
         </div>
 
+        <hr />
+
+        <h2>Auto layout columns</h2>
+
+        <p>When flexbox is enabled, you can utilize breakpoint specific column classes for equal width columns.</p>
+
+        <code>xs</code> breakpoint
+        <div class="row row-flex">
+            <div class="col-xs">
+                1 of 2
+            </div>
+            <div class="col-xs">
+                1 of 2
+            </div>
+        </div>
+
+        <code>md</code> breakpoint
+        <div class="row row-flex">
+            <div class="col-md">
+                1 of 3
+            </div>
+            <div class="col-md">
+                1 of 3
+            </div>
+            <div class="col-md">
+                1 of 3
+            </div>
+        </div>
+
+        <code>xs</code> breakpoint
+        <div class="row row-flex">
+            <div class="col-xs">
+                1 of 5
+            </div>
+            <div class="col-xs">
+                1 of 5
+            </div>
+            <div class="col-xs">
+                1 of 5
+            </div>
+            <div class="col-xs">
+                1 of 5
+            </div>
+            <div class="col-xs">
+                1 of 5
+            </div>
+        </div>
 </div>
 
 </body>
