--- a/test/visual/flexbox-grid.html
+++ b/test/visual/flexbox-grid.html
@@ -55,7 +55,7 @@
     </p>
     <ul>
         <li><strong>normal:</strong> float model</li>
-        <li><strong>flex:</strong> flexbox model</li>
+        <li><strong>flex:</strong> opt-in flexbox model</li>
     </ul>
 
     <h2>Five grid tiers</h2>
