add flex card group and more docs

--- a/test/visual/flexbox-cards.html
+++ b/test/visual/flexbox-cards.html
@@ -40,7 +40,9 @@ Holder.addTheme("gray", {
 <body>
 
 <div class="container">
-    <h1>Card deck</h1>
+    <h1>Cards</h1>
+
+    <h2>Deck</h1>
 
     <p>
         Here we are testing the two different styles for card layouts using the opt-in flexbox classes.
@@ -229,6 +231,67 @@ Holder.addTheme("gray", {
             </div>
         </div>
     </div>
+
+    <hr />
+
+    <h2>Group</h2>
+
+    normal:
+    <div class="card-group">
+      <div class="card">
+        <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+
+    flex:
+    <div class="card-group card-group-flex">
+      <div class="card">
+        <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+
 
 </div>
 
