--- a/test/visual/flexbox-input.html
+++ b/test/visual/flexbox-input.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en-us">
 <head>
-<title>Figuration - Flexbox Input</title>
+<title>Figuration - Flexbox Input Group</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
