--- a/widgets/index.html
+++ b/widgets/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<html lang="en-US">
 <meta charset="utf-8">
 <title>Redirecting…</title>
-<link rel="canonical" href="/widgets/overview/">
-<meta http-equiv="refresh" content="0; url=/widgets/overview/">
+<link rel="canonical" href="http://figuration.org/widgets/overview/">
+<meta http-equiv="refresh" content="0; url=http://figuration.org/widgets/overview/">
 <h1>Redirecting…</h1>
-<a href="/widgets/overview/">Click here if you are not redirected.</a>
-<script>location="/widgets/overview/"</script>
+<a href="http://figuration.org/widgets/overview/">Click here if you are not redirected.</a>
+<script>location="http://figuration.org/widgets/overview/"</script>
+</html>
