--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<html lang="en-US">
 <meta charset="utf-8">
 <title>Redirecting…</title>
-<link rel="canonical" href="/about/overview/">
-<meta http-equiv="refresh" content="0; url=/about/overview/">
+<link rel="canonical" href="http://figuration.org/about/overview/">
+<meta http-equiv="refresh" content="0; url=http://figuration.org/about/overview/">
 <h1>Redirecting…</h1>
-<a href="/about/overview/">Click here if you are not redirected.</a>
-<script>location="/about/overview/"</script>
+<a href="http://figuration.org/about/overview/">Click here if you are not redirected.</a>
+<script>location="http://figuration.org/about/overview/"</script>
+</html>
