--- a/content/index.html
+++ b/content/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<html lang="en-US">
 <meta charset="utf-8">
 <title>Redirecting…</title>
-<link rel="canonical" href="/content/reboot/">
-<meta http-equiv="refresh" content="0; url=/content/reboot/">
+<link rel="canonical" href="http://figuration.org/content/reboot/">
+<meta http-equiv="refresh" content="0; url=http://figuration.org/content/reboot/">
 <h1>Redirecting…</h1>
-<a href="/content/reboot/">Click here if you are not redirected.</a>
-<script>location="/content/reboot/"</script>
+<a href="http://figuration.org/content/reboot/">Click here if you are not redirected.</a>
+<script>location="http://figuration.org/content/reboot/"</script>
+</html>
