--- a/get-started/index.html
+++ b/get-started/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<html lang="en-US">
 <meta charset="utf-8">
 <title>Redirecting…</title>
-<link rel="canonical" href="/get-started/quick-start/">
-<meta http-equiv="refresh" content="0; url=/get-started/quick-start/">
+<link rel="canonical" href="http://figuration.org/get-started/quick-start/">
+<meta http-equiv="refresh" content="0; url=http://figuration.org/get-started/quick-start/">
 <h1>Redirecting…</h1>
-<a href="/get-started/quick-start/">Click here if you are not redirected.</a>
-<script>location="/get-started/quick-start/"</script>
+<a href="http://figuration.org/get-started/quick-start/">Click here if you are not redirected.</a>
+<script>location="http://figuration.org/get-started/quick-start/"</script>
+</html>
