Fix syntax and validation errors in visual tests
[skip ci]

--- a/test/visual/flexbox-button.html
+++ b/test/visual/flexbox-button.html
@@ -30,7 +30,7 @@ Holder.addTheme("gray", {
 }
 </style>
 
-<html
+</head>
 <body>
 
 <div class="container">
@@ -110,10 +110,10 @@ Holder.addTheme("gray", {
         <button type="button" class="btn">Button</button>
         <button type="button" class="btn">Button</button>
             <div class="btn-group" role="group">
-                <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop1">
+                <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop0">
                 Dropdown
             </button>
-            <ul class="dropdown-menu" id="btnGroupVerticalDrop1">
+            <ul class="dropdown-menu" id="btnGroupVerticalDrop0">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
@@ -121,10 +121,10 @@ Holder.addTheme("gray", {
         <button type="button" class="btn">Button</button>
         <button type="button" class="btn">Button</button>
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop2">
+            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop1">
                 Dropdown
             </button>
-            <ul class="dropdown-menu" id="btnGroupVerticalDrop2">
+            <ul class="dropdown-menu" id="btnGroupVerticalDrop1">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
@@ -139,7 +139,7 @@ Holder.addTheme("gray", {
             </ul>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop1">
+            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop4">
                 Dropdown
             </button>
             <ul class="dropdown-menu" id="btnGroupVerticalDrop4">
@@ -154,10 +154,10 @@ Holder.addTheme("gray", {
         <button type="button" class="btn">Button</button>
         <button type="button" class="btn">Button</button>
             <div class="btn-group" role="group">
-                <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop1">
+                <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop5">
                 Dropdown
             </button>
-            <ul class="dropdown-menu" id="btnGroupVerticalDrop1">
+            <ul class="dropdown-menu" id="btnGroupVerticalDrop5">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
@@ -165,28 +165,28 @@ Holder.addTheme("gray", {
         <button type="button" class="btn">Button</button>
         <button type="button" class="btn">Button</button>
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop2">
+            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop6">
                 Dropdown
             </button>
-            <ul class="dropdown-menu" id="btnGroupVerticalDrop2">
+            <ul class="dropdown-menu" id="btnGroupVerticalDrop6">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop3">
+            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop7">
                 Dropdown
             </button>
-            <ul class="dropdown-menu" id="btnGroupVerticalDrop3">
+            <ul class="dropdown-menu" id="btnGroupVerticalDrop7">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop1">
+            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop8">
                 Dropdown
             </button>
-            <ul class="dropdown-menu" id="btnGroupVerticalDrop4">
+            <ul class="dropdown-menu" id="btnGroupVerticalDrop8">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
