--- a/test/visual/flexbox-cards.html
+++ b/test/visual/flexbox-cards.html
@@ -36,13 +36,13 @@ Holder.addTheme("gray", {
 }
 </style>
 
-<html
+</head>
 <body>
 
 <div class="container">
     <h1>Cards</h1>
 
-    <h2>Deck</h1>
+    <h2>Deck</h2>
 
     <p>
         Here we are testing the two different styles for card layouts using the opt-in flexbox classes.
