--- a/test/visual/flexbox-input.html
+++ b/test/visual/flexbox-input.html
@@ -30,7 +30,7 @@ Holder.addTheme("gray", {
 }
 </style>
 
-<html
+</head>
 <body>
 
 <div class="container"><div class="row"><div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
@@ -53,38 +53,38 @@ normal:
 
 flex:
 <div class="input-group input-group-flex">
-  <span class="input-group-addon" id="basic-addon1">@</span>
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+  <span class="input-group-addon" id="basic-addon2">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon2">
 </div>
 
 <hr />
 
 normal:
 <div class="input-group">
-  <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon2">
-  <span class="input-group-addon" id="basic-addon2">@example.com</span>
+  <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon3">
+  <span class="input-group-addon" id="basic-addon3">@example.com</span>
 </div>
 
 flex:
 <div class="input-group input-group-flex">
-  <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon2">
-  <span class="input-group-addon" id="basic-addon2">@example.com</span>
+  <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon4">
+  <span class="input-group-addon" id="basic-addon4">@example.com</span>
 </div>
 
 <hr />
 
 normal:
-<label for="basic-url">Your vanity URL</label>
+<label for="basic-url0">Your vanity URL</label>
 <div class="input-group">
-  <span class="input-group-addon" id="basic-addon3">https://example.com/users/</span>
-  <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+  <span class="input-group-addon" id="basic-addon5">https://example.com/users/</span>
+  <input type="text" class="form-control" id="basic-url0" aria-describedby="basic-addon5">
 </div>
 
 flex:
-<label for="basic-url">Your vanity URL</label>
+<label for="basic-url1">Your vanity URL</label>
 <div class="input-group input-group-flex">
-  <span class="input-group-addon" id="basic-addon3">https://example.com/users/</span>
-  <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+  <span class="input-group-addon" id="basic-addon6">https://example.com/users/</span>
+  <input type="text" class="form-control" id="basic-url1" aria-describedby="basic-addon6">
 </div>
 
 <hr />
