--- a/test/visual/flexbox-media.html
+++ b/test/visual/flexbox-media.html
@@ -29,7 +29,7 @@ Holder.addTheme("gray", {
 }
 </style>
 
-<html
+</head>
 <body>
 
 <div class="container"><div class="row"><div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
