Card image tweaks (#38)
* Card image tweaks

- Add `.img-responsive` to examples
- Rework `border-radius` for card images

* Fix typo

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2982,7 +2982,7 @@ Anchor variants:<br />
 <h3>Card</h3>
 <div class="card-sample">
     <div class="card">
-      <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -2994,7 +2994,7 @@ Anchor variants:<br />
 <h3>Card - content types</h3>
 <div class="card-sample">
     <div class="card">
-      <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -3019,7 +3019,7 @@ Anchor variants:<br />
     </div>
 
     <div class="card">
-      <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
       <div class="card-block">
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
@@ -3143,7 +3143,7 @@ Anchor variants:<br />
 
     <h3>Card - image caps</h3>
     <div class="card">
-      <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -3156,12 +3156,12 @@ Anchor variants:<br />
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
-      <img class="card-img-bottom" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-bottom img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
     </div>
 
     <h3>Card - image overlay</h3>
     <div class="card">
-      <img src="../assets/img/test.gif" class="card-img" alt="Card image" style="width: 100%; opacity: .3;">
+      <img src="../assets/img/test.gif" class="card-img img-responsive" alt="Card image" style="width: 100%; opacity: .3;">
       <div class="card-img-overlay">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
@@ -3301,7 +3301,7 @@ Anchor variants:<br />
 <div class="card-sample">
     <div class="card-group">
       <div class="card">
-        <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -3309,7 +3309,7 @@ Anchor variants:<br />
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -3317,7 +3317,7 @@ Anchor variants:<br />
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -3331,7 +3331,7 @@ Anchor variants:<br />
 <div class="card-deck-wrapper">
   <div class="card-deck">
     <div class="card">
-      <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -3339,7 +3339,7 @@ Anchor variants:<br />
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -3347,7 +3347,7 @@ Anchor variants:<br />
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -3386,7 +3386,7 @@ Anchor variants:<br />
 <small>not available in IE9 and below - reverts to single column</small><br />
 <div class="card-columns">
   <div class="card">
-    <img class="card-img-top" data-src="holder.js/100px150" alt="Card image cap">
+    <img class="card-img-top img-responsive" data-src="holder.js/100px150" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Card title that wraps to a new line</h4>
       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -3407,7 +3407,7 @@ Anchor variants:<br />
     </blockquote>
   </div>
   <div class="card">
-    <img class="card-img-top" data-src="holder.js/100px150" alt="Card image cap">
+    <img class="card-img-top img-responsive" data-src="holder.js/100px150" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -3430,7 +3430,7 @@ Anchor variants:<br />
     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
   </div>
   <div class="card">
-    <img class="card-img" data-src="holder.js/100px200" alt="Card image" />
+    <img class="card-img img-responsive" data-src="holder.js/100px200" alt="Card image" />
   </div>
   <div class="card card-block text-xs-right">
     <blockquote class="card-blockquote">
